--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,19 +1,21 @@
-fastapi==0.104.1
-uvicorn==0.24.0
-sqlalchemy==2.0.23
-psycopg2-binary==2.9.9
-pydantic==2.5.0
-python-jose==3.3.0
-passlib==1.7.4
-python-multipart==0.0.6
-numpy==1.24.3
-pandas==2.0.3
-scikit-learn==1.3.0
-tensorflow==2.13.0
-wfdb==4.1.2
-plotly==5.18.0
-kaleido==0.2.1
-shap==0.42.1
-pyjwt==2.8.0
-bcrypt==4.0.1
-python-dotenv==1.0.0
+fastapi>=0.104.1
+uvicorn>=0.24.0
+sqlalchemy>=2.0.23
+psycopg2-binary>=2.9.9
+pydantic>=2.5.0
+python-jose>=3.3.0
+passlib>=1.7.4
+python-multipart>=0.0.6
+numpy>=1.24.3
+pandas>=2.0.3
+scikit-learn>=1.3.0
+tensorflow>=2.13.0
+wfdb>=4.1.2
+plotly>=5.18.0
+kaleido>=0.2.1
+shap>=0.42.1
+pyjwt>=2.8.0
+bcrypt>=4.0.1
+python-dotenv>=1.0.0
+pydantic-settings>=2.0.0
+email-validator>=2.0.0
