--- a/backend/.env.example
+++ b/backend/.env.example
@@ -11,9 +11,5 @@ ACCESS_TOKEN_EXPIRE_MINUTES=11520
 # CORS settings
 BACKEND_CORS_ORIGINS=["http://localhost:3000", "http://localhost:8000"]
 
-# Database settings
-POSTGRES_SERVER=db
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=postgres
-POSTGRES_DB=cardio_db
-DATABASE_URL=postgresql://postgres:postgres@db:5432/cardio_db
+# Database settings (SQLite for local development)
+DATABASE_URL=sqlite:///./cardio_db.sqlite3
