--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -11,14 +11,18 @@ RUN apt-get update && apt-get install -y \
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
+# Create directories for uploads and database
+RUN mkdir -p uploads/ecg_files uploads/visualizations db
+
 # Copy application code
 COPY . .
 
-# Create directories for uploads and database
-RUN mkdir -p uploads/ecg_files uploads/visualizations
-
 # Expose port
 EXPOSE 8000
+
+# Health check
+HEALTHCHECK --interval=30s --timeout=30s --start-period=5s --retries=3 \
+    CMD curl -f http://localhost:8000/health || exit 1
 
 # Run the application
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
