--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -14,5 +14,9 @@ COPY . .
 # Expose port
 EXPOSE 3000
 
+# Health check
+HEALTHCHECK --interval=30s --timeout=30s --start-period=5s --retries=3 \
+    CMD wget --no-verbose --tries=1 --spider http://localhost:3000/ || exit 1
+
 # Start the application
 CMD ["npm", "start"]
