--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -16,5 +16,7 @@ pyjwt>=2.8.0
 python-dotenv>=1.0.0
 pydantic-settings>=2.0.0
 email-validator>=2.0.0
+bcrypt>=4.0.0,<5.0.0
 passlib[bcrypt]>=1.7.4
+
 lightgbm>=4.0.0
