refactor(backend): centralize file path handling and improve Docker permissions
- Introduce get_upload_directory() and get_absolute_file_path() utilities
- Replace hardcoded paths with utility functions for consistency
- Add chmod 777 for uploads and db directories in Dockerfile
- Include debug logging for absolute file paths in ECG processing
- Simplify directory creation using centralized utilities

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -25,6 +25,7 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 # Create directories for uploads and database
 RUN mkdir -p uploads/ecg_files uploads/visualizations db
+RUN chmod -R 777 uploads db
 
 # Copy application code
 COPY . .
